<resources>
    <string name="app_name">Notes App SQLite</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="date">Date</string>
    <string name="created_at">Created at %s</string>
    <string name="edited_at">Edited at %s</string>
    <string name="empty_notes_alert">There are no notes yet, please add first</string>
    <string name="empty_result_alert">Note(s) not found</string>
</resources>